--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -33,6 +33,7 @@ color: #796155;
   align-items: center;
   justify-content: center;
   background-color: #AF7F37;
+  border: none;
   text-align: center;
   width: 80vw;
   height: 10vh;
@@ -61,12 +62,11 @@ span {
   margin: 10px;
 }
 
-@media (min-width: 480px) and (max-width: 779px) {
+@media (min-width: 481px) and (max-width: 767px) {
   #landing-page {
     flex-direction: column;
     justify-content: center;
     font-size: 2rem;
-    height: 100vh;
   }
 
   #title {
@@ -98,7 +98,7 @@ span {
   }
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
   #landing-page {
     flex-direction: column;
     justify-content: center;
@@ -133,4 +133,39 @@ span {
   }
 }
 
+
+@media (max-width: 1024px) and (orientation: landscape) {
+  #landing-page {
+    flex-direction: column;
+    justify-content: center;
+    font-size: 2rem;
+  }
+
+  #title {
+    font-size: 30vh;
+    font-weight: 700;
+    margin: 0;
+  }
+  #callToAction {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 100;
+    font-weight: bold;
+    width: 60vw;
+    font-size: 3.2vw;
+  }
+  #spotifyButton {
+    background-color: #AF7F37;
+    text-align: center;
+    width: 100%;
+    height: 22vh;
+    font-size: 4.5vw;
+    border-color: #7C6547;
+  }
+  #spotifyLogo {
+    width: 8vw;
+  }
+}
 
