--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-#title {
+#landing-page #title {
   font-size: 10rem;
   margin: 10vh 0;
   font-weight: 700;
@@ -24,8 +24,7 @@ color: #796155;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 4.8vw;
-
+  font-size: 4.75vw;
 }
 #spotifyButton {
   display: flex;
