Add color to landing page button on hover

--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -40,6 +40,9 @@ color: #796155;
   color: #1F202D;
 }
 
+#spotifyButton:hover {
+  background-color: #7BAC98;
+}
 
 span {
   display: inline-block;
